classDiagram
    MatchObserver <|-- PlayerController
    PlayerController <|-- PlayerControllerTCP
    PlayerController <|-- PlayerControllerRMI
    Server --> PlayerControllerRMI
    PlayerControllerTCP --> IOHandler
    PlayerControllerRMI --> ViewInterface
    
    class MatchObserver{
        <<Interface>>
      +matchStarted() void
      +someoneJoined(Player someone)
      +someoneQuit(Player someone)
      +someoneDrewInitialCard(Player someone, InitialCard card) void
      +someoneSetInitialSide(Player someone, Side side) void
      +someoneDrewSecretObjectives(Player someone, Pair~Objective, Objective~) void
      +someoneChoseSecretObjective(Player someone, Objective objective) void
      +someonePlayedCard(Player someone, Pair~Integer, Integer~ coords, PlayableCard card, Side side) void
      +someoneDrewCard(Player someone, DrawSource source, PlayableCard card, PlayebleCard replacementCard) void
      +matchFinished() void
    }
    
    class PlayerController{
      - Player player
      - Match match
      +PlayerController()
      +drawInitialCard(Side side) void
      +chooseInitialCardSide() void
      +drawSecretObjectives() void
      +playeCard(Pair~Integer, Integer~ coords, PlayableCard card, Side side, int points) void
      +drawCard(DrawSource source)
      +chooseSecretObjective(Objective objective) void 
      +drawSecretObjectives() void
    }
    
    class PlayerControllerTCP{
      - IOHandler io
      +PlayerControllerTCP(String nickname, Match match, IOHandler io)
      +someoneJoined(Player someone)
      +someoneQuit(Player someone) 
      +matchStarted() void
      +someoneDrewInitialCard(Player someone, InitialCard card) void
      +someoneSetInitialSide(Player someone, Side side) void
      +someoneDrewSecretObjectives(Player someone, Pair~Objective, Objective~) void
      +someoneChoseSecretObjective(Player someone, Objective objective) void
      +someonePlayedCard(Player someone, Pair~Integer, Integer~ coords, PlayableCard card, Side side) void
      +someoneDrewCard(Player someone, DrawSource source, PlayableCard card, PlayebleCard replacementCard) void
      +matchFinished() void
      +drawInitialCard(Side side) void
      +chooseInitialCardSide() void
      +drawSecretObjectives() void
      +playeCard(Pair~Integer, Integer~ coords, PlayableCard card, Side side, int points) void
      +drawCard(DrawSource source)
      +chooseSecretObjective(Objective objective) void 
      +drawSecretObjectives() void
      - sendMessage(Message msg) void
      - connectionError() void
      - createErrorMessage(Exception e) ErrorMessage
    }
    
    class PlayerControllerRMI {
      - ViewInterface view
      +PlayerControllerRMI(String nickname, Match match, int port)
      +someoneJoined(Player someone) void
      +someoneQuit(Player someone) void
      +matchStarted() void
      +someoneDrewInitialCard(Player someone, InitialCard card) void
      +someoneSetInitialSide(Player someone, Side side) void
      +someoneDrewSecretObjectives(Player someone, Pair~Objective, Objective~) void
      +someoneChoseSecretObjective(Player someone, Objective objective) void
      +someonePlayedCard(Player someone, Pair~Integer, Integer~ coords, PlayableCard card, Side side) void
      +someoneDrewCard(Player someone, DrawSource source, PlayableCard card, PlayebleCard replacementCard) void
      +matchFinished() void
      +drawInitialCard(Side side) void
      +chooseInitialCardSide() void
      +drawSecretObjectives() void
      +playeCard(Pair~Integer, Integer~ coords, PlayableCard card, Side side, int points) void
      +drawCard(DrawSource source)
      +chooseSecretObjective(Objective objective) void 
      +drawSecretObjectives() void
      -onConnectionError() void
    }
    
    class Server {
        - Map~String, Match~ matches
        - Map~Integer, Objective~  objectives
        - Map~Integer, PlayableCard~ playableCards
        - Map~Integer, InitialCard~ initialCards
        - int portRMI
        - int portTCP
        + Server(int portRMI, int portTCP)
        + main() void
        + joinMatch(String matchName, String nickname) PlayerControllerRMI
        + createMatch(String matchName, int maxPlayers) void
        + getNewMatch(int maxPlayers) Match
        + getJoinableMatches() Map~String, Match~
        + startRMIServer() void
        + startTCPServer() void
    }
    
    class IOHandler {
        - ObjectInputStream inputStream 
        - ObjectOutputStream outputStream
        - MessageJsonParser parser
        + IOHandler(Socket socker)
        + readMsg() String
        + writeMsg(Message msg) void
    }
    
    class ViewInterface {
      <<Interface>>
      + giveSecretObjectives(Pair~Objective, Objective~ secretObjectives) void
      + matchStarted(Map~Color, String~ playersNicknamesAndPawns, Map &lt String, List &lt PlayableCard &gt &gt playerHands, Pair~Objective, Objective~ visibleObjectives, Map~DrawSource, PlayableCard~ visiblePlayableCards, Pair~Symbol, Symbol~ decksCardsBacks) void
      + someoneDrewInitialCard(Player someone, InitialCard card) void
      + someoneSetInitialSide(Player someone, Side side) void
      + someoneDrewSecretObjective(Player someone, Pair~Objective, Objective~ objectives) void
      + someoneChoseSecretObjective(Player someone, Objective objective)
      + someonePlayedCard(Player someone, Pair~Integer, Integer~ coords, PlayableCard card, Side side) void
      + someoneDrewCard(Player someone, DrawSource source, Card card) void
      + matchFinished() void
    }
